--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native/new-app-screen": "0.82.1",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "^7.5.1",
+    "lucide-react-native": "^0.547.0",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-bootsplash": "^6.3.3",
     "react-native-safe-area-context": "^5.5.2",
-    "react-native-bootsplash": "^6.3.3"
+    "react-native-screens": "^4.18.0",
+    "react-native-svg": "^15.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -33,6 +39,8 @@
     "@types/react": "^19.1.1",
     "@types/react-test-renderer": "^19.1.0",
     "jest": "^29.6.3",
+    "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "19.1.1",
     "typescript": "^5.8.3"
   },
