--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.5.1",
@@ -22,9 +23,11 @@
     "react-hook-form": "^7.65.0",
     "react-native": "0.82.1",
     "react-native-bootsplash": "^6.3.3",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-keychain": "^10.0.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.18.0",
+    "react-native-share": "^12.2.0",
     "react-native-svg": "^15.14.0",
     "react-native-toast-message": "^2.3.3",
     "zod": "^4.1.12"
