--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@react-native-clipboard/clipboard": "^1.16.3",
-    "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.5.1",
     "axios": "^1.12.2",
@@ -23,6 +22,7 @@
     "react-hook-form": "^7.65.0",
     "react-native": "0.82.1",
     "react-native-bootsplash": "^6.3.3",
+    "react-native-deck-swiper": "^2.0.19",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-keychain": "^10.0.0",
     "react-native-safe-area-context": "^5.5.2",
@@ -35,13 +35,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/plugin-transform-export-namespace-from": "^7.27.1",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.25.0",
-    "@bam.tech/react-native-make": "^3.0.3",
     "@biomejs/biome": "^2.3.0",
-    "@react-native-community/cli": "20.0.0",
-    "@react-native-community/cli-platform-android": "20.0.0",
-    "@react-native-community/cli-platform-ios": "20.0.0",
     "@react-native/babel-preset": "0.82.1",
     "@react-native/metro-config": "0.82.1",
     "@react-native/typescript-config": "0.82.1",
@@ -49,7 +43,6 @@
     "@types/react": "^19.1.1",
     "@types/react-test-renderer": "^19.1.0",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
     "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "19.1.1",
     "typescript": "^5.8.3"
