--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "@babel/core": "^7.25.2",
     "@babel/plugin-transform-export-namespace-from": "^7.27.1",
     "@biomejs/biome": "^2.3.0",
+    "@react-native-community/cli": "^16.0.2",
+    "@react-native-community/cli-platform-ios": "^16.0.2",
     "@react-native/babel-preset": "0.82.1",
     "@react-native/metro-config": "0.82.1",
     "@react-native/typescript-config": "0.82.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.1",
     "@types/react-test-renderer": "^19.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.6.3",
     "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "19.1.1",
