--- a/ios/daily_quote/Info.plist
+++ b/ios/daily_quote/Info.plist
@@ -51,5 +51,16 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>dailyquote</string>
+			</array>
+			<key>CFBundleURLName</key>
+			<string>com.dailyquote</string>
+		</dict>
+	</array>
 </dict>
 </plist>
