--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
-    "format": "biome format --write .",
+    "lint:format": "biome format --write .",
     "start": "react-native start",
     "test": "jest"
   },
@@ -23,6 +23,7 @@
     "react-native": "0.82.1",
     "react-native-bootsplash": "^6.3.3",
     "react-native-deck-swiper": "^2.0.19",
+    "react-native-deep-linking": "^2.2.0",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-keychain": "^10.0.0",
     "react-native-safe-area-context": "^5.5.2",
